# Jarvis

./: BUILD_ON_WINDOWS.md  CONTRIBUTORS.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_WINDOWS.md  READY_TO_BUILD.md  build-windows.ps1  build.sh  compile_log.txt  debug.txt  diag.json  js.code-workspace  limine.conf  link_log.txt  qemu_log.json  run.sh
ai_core/: CMakeLists.txt
ai_core/src/: jarvis_core.c  syscalls.c
boot/: grub.cfg
cmake/: WindowsToolchain.cmake
config/: system.conf
docs/: ARCHITECTURE.md  BUILD.md  USER_GUIDE.md  WINDOWS_BUILD.md
drivers/: CMakeLists.txt
drivers/src/: mouse.c
filesystem/: CMakeLists.txt
filesystem/src/: jarfs.c
gui/: CMakeLists.txt
gui/src/: jarvis_gui.c
include/: ai  drivers  kernel
iso_root/boot/: jarvis.elf  limine.conf
jarvis_llm/: Makefile  README.md  jarvis  jarvis.c  jarvis.h  main.c  main.o:Zone.Identifier  test_forward.c  test_forward2.c  test_forward3.c  test_simple.c
kernel/: CMakeLists.txt  jarvis.iso  linker.ld
kernel/include/: miniz.h
kernel/include/kernel/: console.h  interrupt.h  memory.h  panic.h  scheduler.h  serial.h  symbols.h  types.h
kernel/src/: console.c  cpu_low_level.c  gpu.c  interrupt.c  keyboard.c  main.c  memory.c  pmm.c  stubs.c  tinfl.c  tinfl.h  vmm.c
libc/: CMakeLists.txt
libc/include/: assert.h  ctype.h  errno.h  math.h  stdio.h  stdlib.h  string.h  time.h
libc/src/: ctype.c  errno.c  math.c  stdio.c  stdlib.c  string.c  time.c
staging/: jarvis.elf  limine.conf
tools/: CMakeLists.txt
tools/src/: shell.c
(+5 files in other folders)
